[LFC] Fix statically positioned replaced out-of-flow horizontal geometry https://bugs.webkit.org/show_bug.cgi?id=194163

Reviewed by Simon Fraser.

Source/WebCore:

Fix a typo.

* layout/FormattingContextGeometry.cpp:
(WebCore::Layout::FormattingContext::Geometry::outOfFlowReplacedHorizontalGeometry):

Tools:

775

* LayoutReloaded/misc/LFC-passing-tests.txt:

Canonical link: https://commits.webkit.org/208651@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240886 268f45cc-cd09-0410-ab3c-d52691b4dbfc